# esp_debugger

./: .gitmodules  CMakeLists.txt  README.md
ext/: add_submodule.sh
resources/: esp_debug_fr_FR.ts
src/core/: main.cpp  mainwindow.cpp  mainwindow.h
src/handlers/: debugginghandler.cpp  debugginghandler.h
